moddify test job

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,5 +6,7 @@ jobs:
     test:
         runs-on: ubuntu-latest    
         steps: 
+         - name: Get Code from repo
+           uses: actions/checkout@v4    
          - name: Find manage.py file
-           run: cat manage.py  
+           run: cat ~/manage.py  
