--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,11 @@ jobs:
               uses: docker/login-action@v2
               with:
                     username: ${{ secrets.DOCKER_USERNAME }}
-                    password: ${{ secrets.DOCKER_PASSWORD }}         
+                    password: ${{ secrets.DOCKER_PASSWORD }} 
+                    
+            - name: Build and push Docker image
+              uses: docker/build-push-action@v3
+              with:
+                    context: .
+                    push: true
+                    tags: ${{ secrets.DOCKER_HUB_USERNAME }}/RecipeApp-Django:latest                
