--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
               with:
                     context: .
                     push: true
-                    tags: ${{ secrets.DOCKER_USERNAME }}/RecipeApp-Django:latest                
+                    tags: ${{ secrets.DOCKER_USERNAME }}/recipeapp-django               
