--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
            run: cat manage.py
     build:
         runs-on: ubuntu-latest
+        needs: test
         steps:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v2
