--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
         runs-on: ubuntu-latest
         needs: test
         steps:
+            - name: Get Code from repo
+              uses: actions/checkout@v4
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v2
             - name: Log in to Docker Hub
