--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,14 @@ jobs:
               with:
                 context: .
                 push: true
-                tags: tayo9/recipeapp-django               
+                tags: tayo9/recipeapp-django 
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - name: Configure AWS Credentials
+              uses: aws-actions/configure-aws-credentials@v1
+              with:
+                    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                    aws-region: us-east-1                          
