--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,7 @@ jobs:
               uses: docker/login-action@v2
               with:
                     username: ${{ secrets.DOCKER_USERNAME }}
-                    password: ${{ secrets.DOCKER_PASSWORD }} 
-
-            - name: Test
-              run: cat test.txt        
-                    
+                    password: ${{ secrets.DOCKER_PASSWORD }}       
             - name: Build and push Docker image
               uses: docker/build-push-action@v3
               with:
@@ -42,4 +38,15 @@ jobs:
               with:
                     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                    aws-region: us-east-1                         
+                    aws-region: us-east-1    
+            - name: Log in to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD }} 
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
+          
+            - name: Pull Docker image
+              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/recipeapp-django:latest            
+
