--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,5 +48,5 @@ jobs:
               uses: docker/setup-buildx-action@v2
           
             - name: Pull Docker image
-              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/recipeapp-django:latest            
+              run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/recipeapp-django           
 
