Pull image on AWS Machine

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,3 +59,11 @@ jobs:
                 name: docker-image
                 path: image.tar
 
+            - name: Push Docker image to EC2 instance
+              env:
+                  EC2_INSTANCE_ID: i-0ec48848d0e369a4a 
+              run: |
+                  aws ec2 get-password-data --instance-id $EC2_INSTANCE_ID --priv-launch-key ${{ secrets.EC2_PRIVATE_KEY }} --query PasswordData --output text | base64 --decode > ec2_password.txt
+                  scp -i ${{ secrets.EC2_PRIVATE_KEY }} -o StrictHostKeyChecking=no image.tar ec2-user@${{ secrets.EC2_PUBLIC_DNS }}:/home/ec2-user
+                  ssh -i ${{ secrets.EC2_PRIVATE_KEY }} -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_DNS }} "docker load -i image.tar && docker run ${{ secrets.DOCKER_USERNAME }}/recipeapp-django"
+
