--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,3 +37,6 @@ jobs:
               uses: webfactory/ssh-agent@v0.5.4
               with:
                 ssh-private-key: ${{ secrets.EC2_PRIVATE_KEY }}
+            - name: Run SSH command
+              run: |
+                  ssh -o StrictHostKeyChecking=no ec2-user@ec2-44-222-227-27.compute-1.amazonaws.com 'echo "Hello, World!"'    
